feat(home): testiominals, blog, faq

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,8 @@
 @theme {
   --color-vl-primary: #ffb300;
   --color-vl-accent: #ffb300;
+  --color-vl-neutral-2: #f9fafb;
+  --color-vl-neutral-3: #e5e7eb;
   --color-vl-neutral-5: #6b7280;
   --color-vl-neutral-8: #252628;
   --color-vl-neutral-9: #111111;
