--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,38 @@
   --color-vl-gray: #666666;
   --color-vl-gray-light: #999999;
   --color-vl-gray-dark: #444444;
+
+  --breakpoint-xs: 420px;
+}
+
+@utility container {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+
+  @media (min-width: 640px) {
+    max-width: 640px;
+  }
+  @media (min-width: 768px) {
+    max-width: 768px;
+  }
+  @media (min-width: 1024px) {
+    max-width: 1024px;
+  }
+  @media (min-width: 1280px) {
+    max-width: 1280px;
+  }
+  @media (min-width: 1440px) {
+    max-width: 1240px;
+  }
+}
+
+@utility border {
+  border-width: 1px;
+  border-style: solid;
+  border-color: #f3f4f6;
 }
 
 :root {
@@ -146,4 +178,43 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+}
+
+/* SCROLL BAR */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #ffb3001f transparent; /* thumb / track */
+}
+
+/* WebKit browsers: Chrome, Safari, Edge */
+*::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #ffb3001f; /* 12% opacity */
+  border-radius: 9999px;
+  border: 2px solid transparent;
+  background-clip: content-box;
+  transition: background-color 0.3s;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #ffb30066; /* 40% opacity on hover */
+}
+
+/* SELECT TEXT */
+::selection {
+  background: #ffb300;
+  color: #000; /* pastikan teks tetap terbaca */
+}
+
+::-moz-selection {
+  background: #ffb300;
+  color: #000;
 }
