--- a/app/globals.css
+++ b/app/globals.css
@@ -135,6 +135,8 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+
+  scroll-behavior: smooth;
 }
 
 .dark {
